# ocrd_monitor

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  init.sh  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: docker-in-docker-debian.sh
.github/workflows/: publish.yml  test-ci.yml
docker-browse-ocrd/: Dockerfile  init.sh
ocrdbrowser/: __init__.py  _browser.py  _cache.py  _client.py  _docker.py  _port.py  _subprocess.py  _workspace.py
ocrdmonitor/: backgroundprocess.py  browserprocess.py  dbmodel.py  environment.py  main.py  ocrdcontroller.py  ocrdjob.py  processstatus.py  processtimeout.py  protocols.py  repositories.py  sshps.py  sshremote.py
ocrdmonitor/database/: __init__.py  _browserprocessrepository.py  _initdb.py  _ocrdjobrepository.py  _ocrdworkflowrepository.py
ocrdmonitor/server/: app.py  jobs.py  lifespan.py  logs.py  proxy.py  settings.py  workflows.py  workspaces.py
ocrdmonitor/server/api/: __init__.py
ocrdmonitor/server/api/routers/: jobs.py  workspaces.py
ocrdmonitor/server/lifespan/: __init__.py  processtimeout.py  unreachable_cleanup.py
ocrdmonitor/server/static/: main.css  main.js
ocrdmonitor/server/templates/: base.html.j2  jobs.html.j2  list.html.j2  list_workspaces.html.j2  table.html.j2  workflow_details.html.j2  workflow_form.html.j2  workflows.html.j2  workspace.html.j2
ocrdmonitor/server/workspaces/: __init__.py  _browsercommunication.py  _launchroutes.py  _listroutes.py  _proxyroutes.py
tests/: decorators.py  markers.py
tests/fakes/: __init__.py  _broadwayfake.py  _ocrdbrowserfake.py
tests/ocrdbrowser/: browserdoubles.py  test_browser_launch.py  test_launch.py  test_path_cache.py  test_websocketchannel.py  test_workspace.py
tests/ocrdmonitor/: _test_jobs.py  conftest.py  sshcontainer.py  test_jobs.py  test_processstatus.py  test_processtimeout.py  test_redirect.py  test_sshps.py  test_sshremote.py
tests/ocrdmonitor/fixtures/: environment.py  fixtureconfig.py  lifespan.py  repository.py  settings.py
tests/ocrdmonitor/server/: conftest.py  decorators.py  fixtures.py  test_browser_access_time.py  test_job_endpoint.py  test_settings.py  test_startup.py  test_workspace_endpoint.py
tests/ocrdmonitor/server/fixtures/: app.py  environment.py  factory.py  fixtureconfig.py  repository.py  settings.py
tests/ocrdmonitor/server/keys/: id.rsa  id.rsa.pub
tests/ocrdmonitor/server/lifespan/: test_processtimeout.py  test_startup.py
tests/testdoubles/: __init__.py  _backgroundprocess.py  _broadwayfake.py  _browserfactory.py  _browserfake.py  _browserprocessrepository.py  _browserspy.py  _clock.py  _inmemoryrepositories.py  _registrybrowserfactory.py
tests/workspaces/a_workspace/: mets.xml
