[tool.pdm]

[project]
name = "ocrd-monitor"
version = "0.1.0"
description = "A frontend to the OCRD Manager"
dynamic = ["version"]
authors = [
    { name = "Sven Marcus", email = "sven.marcus@tu-braunschweig.de" },
    { name = "Markus Weigelt", email = "markus.weigelt@slub-dresden.de" },
    { name = "Robert Sachunsky", email = "robert.sachunsky@slub-dresden.de" },
]
dependencies = [
    "fastapi>=0.95.0",
    "Jinja2>=3.1.2",
    "websockets>=10.4",
    "uvicorn>=0.19.0",
    "httpx>=0.24.1",
    "beanie>=1.18.0",
    "pydantic-settings>=2.0.2",
    "pydantic>=2.1.1",
    "python-multipart>=0.0.6",
    "setuptools-git-versioning>=1.13.5",
]
requires-python = ">=3.10"
license = { text = "MIT" }
[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.11.1",
    "mypy>=1.4.0",
    "pytest>=7.2.2",
    "pytest-asyncio>=0.21.0",
    "testcontainers>=3.7.1",
    "black>=23.1.0",
    "types-requests>=2.28.11.15",
    "types-beautifulsoup4>=4.12.0.0",
    "pytest-clarity>=1.0.1",
    "pytest-httpx>=0.23.1",
]
nox = ["nox>=2022.11.21"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test"
]

[tool.pdm.scripts]
test = "pytest tests -m 'not integration'"
test-integration = "pytest tests"
monitor = "uvicorn --host 0.0.0.0 --port 5000 'ocrdmonitor.main:app'"

[tool.setuptools-git-versioning]
enabled = true

[[tool.mypy.overrides]]
module = ["testcontainers.*", "motor.motor_asyncio"]
ignore_missing_imports = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
